[package]
name = "kinesis-hyper-bug"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
log = "*"
env_logger = "*"
pretty-bytes = "*"
rusoto_core = { git = "https://github.com/srijs/rusoto-async", branch = "master" } # "*"
rusoto_kinesis = { git = "https://github.com/srijs/rusoto-async", branch = "master" } # "*"
futures = "*"
spmc = "*"
hyper = { git = "https://github.com/hyperium/hyper.git", rev = "44af273853f82b81591b813d13627e143a14a6b7" }

[profile.release]
debug=true
