[package]
name = "kinesis-hyper-bug"
version = "0.1.0"
authors = ["Xavier Lange <xrlange@gmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
log = "*"
env_logger = "*"
pretty-bytes = "*"
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
rusoto_core = { git = "https://github.com/rusoto/rusoto", branch = "master" } # {path = "/Users/xlange/code/viasat/rusoto/rusoto/core"} # "*"
rusoto_kinesis = { git = "https://github.com/rusoto/rusoto", branch = "master" } # {path = "/Users/xlange/code/viasat/rusoto/rusoto/services/kinesis"} # "*"
futures = "*"
spmc = "*"

[profile.release]
debug=true
